If an ImportItemDisplay has errors or has a new filename, its dest path is displayed

--- a/MemoryMosaic/Pages/Import.razor
+++ b/MemoryMosaic/Pages/Import.razor
@@ -40,7 +40,7 @@
 				<div class="errorContainer">
 					@foreach (var importItem in group)
 					{
-						<ImportItemDisplay Import="@this" ImportItem="@importItem" Index="@index"/>
+						<ImportItemDisplay Import="@this" ImportItem="@importItem" Index="@index" HasErrors="true"/>
 						index++;
 					}
 					
