--- a/MemoryMosaic/Shared/Import/ImportItemDisplay.razor
+++ b/MemoryMosaic/Shared/Import/ImportItemDisplay.razor
@@ -92,7 +92,7 @@
 
 	<textarea style="display: @(String.IsNullOrWhiteSpace(ImportItem.Description) ? "none" : "inline")" @bind="@ImportItem.Description" placeholder="Description"></textarea>
 	
-	@if (Import.DestinationPathsVisible)
+	@if (Import.DestinationPathsVisible || HasErrors || ImportItem.OriginalFilename != ImportItem.NewFilename)
 	{
 		<span>@ImportItem.DestinationPath</span>
 	}
@@ -107,6 +107,9 @@
 
 	[Parameter, EditorRequired]
 	public int Index { get; set; }
+	
+	[Parameter]
+	public bool HasErrors { get; set; }
 
 	private bool editingFilename;
 	private bool EditingFilename
