--- a/MemoryMosaic/Styles/Components/Import/ImportItemDisplay.scss
+++ b/MemoryMosaic/Styles/Components/Import/ImportItemDisplay.scss
@@ -13,7 +13,7 @@
 		width: 90px;
 	}
 
-	> span:first-of-type {
+	> span:first-of-type, span:last-of-type {
 		white-space: nowrap;
 		overflow: hidden;
 		text-overflow: ellipsis;
