--- a/MemoryMosaic/Styles/Pages/Import.scss
+++ b/MemoryMosaic/Styles/Pages/Import.scss
@@ -27,7 +27,7 @@ header {
 			padding: 8px;
 			gap: 8px;
 			
-			> div {
+			> div:first-of-type, div:nth-of-type(2) {
 				@include flex-row;
 				
 				> span {
@@ -42,8 +42,9 @@ main {
 	@include flex-main(column, 64px);
 	@include available-width;
 	
-	> .errorContainer {
-		border: 4px solid red;
+	> .container {
+		border-width: 4px;
+		border-style: solid;
 		border-radius: 4px;
 		margin-top: 3px;
 		margin-bottom: 3px;
