Import Items now show an arrow before the new dest path

--- a/MemoryMosaic/Shared/Import/ImportItemDisplay.razor
+++ b/MemoryMosaic/Shared/Import/ImportItemDisplay.razor
@@ -94,6 +94,7 @@
 	
 	@if (Import.DestinationPathsVisible || HasErrors || ImportItem.OriginalFilename != ImportItem.NewFilename)
 	{
+		<span style="font-size: 22px; color: @(HasErrors ? "red" : "white")">&rArr;</span>		
 		<span class="@Import.PathWidth">@ImportItem.DestinationPath</span>
 	}
 </div>
