--- a/MemoryMosaic/Shared/Modal/FullscreenViewer/FullscreenViewer.razor
+++ b/MemoryMosaic/Shared/Modal/FullscreenViewer/FullscreenViewer.razor
@@ -172,8 +172,8 @@
 	[Parameter] public ContentLoader? TopLoader { get; set; }
 	[Parameter] public ContentLoader? BottomLoader { get; set; }
 	
+	[Parameter, EditorRequired] public Action? DeleteButtonClick { get; set; }
 	[Parameter] public Action? RestoreButtonClick { get; set; }
-	[Parameter] public Action? DeleteButtonClick { get; set; }
 
 	[Parameter] public string? PageName { get; set; }
 	[Parameter] public bool DisplayItemType { get; set; }
