--- a/MemoryMosaic/Shared/Import/ImportItemDisplay.razor
+++ b/MemoryMosaic/Shared/Import/ImportItemDisplay.razor
@@ -38,7 +38,7 @@
 			}
 			if (ImportItem.FilenameDateTaken != null)
 			{
-				<span style="@(ImportItem.DateTakenSource == DateTakenSource.Filename ? "color: #0080ff" : "")">M: @ImportItem.FilenameDateTaken</span>
+				<span style="@(ImportItem.DateTakenSource == DateTakenSource.Filename ? "color: #0080ff" : "")">F: @ImportItem.FilenameDateTaken</span>
 			}
 		}
 	</div>
