Double clicking an import item's DT sets the source to custom

--- a/MemoryMosaic/Shared/Import/ImportItemDisplay.razor
+++ b/MemoryMosaic/Shared/Import/ImportItemDisplay.razor
@@ -17,7 +17,7 @@
 		<IconButton Icon="close" OnClick="@CancelRenaming"/>
 	}
 
-	<div class="dateTakenDisplay">
+	<div class="dateTakenDisplay" @ondblclick="@(() => ImportItem.DateTakenSource = DateTakenSource.Custom)">
 		@if (ImportItem.DateTakenSource == DateTakenSource.Custom)
 		{
 			<span>C: @(ImportItem.CustomDateTaken == null ? "No Date Taken" : ImportItem.CustomDateTaken)</span>
