--- a/MemoryMosaic/Styles/Pages/Import.scss
+++ b/MemoryMosaic/Styles/Pages/Import.scss
@@ -46,8 +46,15 @@ main {
 		border-width: 4px;
 		border-style: solid;
 		border-radius: 4px;
-		margin-top: 3px;
-		margin-bottom: 3px;
+		margin-top: 4px;
+		margin-bottom: 4px;
+		
+		&.error { border-color: red }
+		&.warning { border-color: yellow }
+		&.none {
+			border-width: 0;
+			margin: 0;
+		}
 	}
 }
 
