--- a/MemoryMosaic/Styles/Components/Import/LibraryItemDisplay.scss
+++ b/MemoryMosaic/Styles/Components/Import/LibraryItemDisplay.scss
@@ -30,6 +30,10 @@
 		}
 
 		&.full { width: auto; }
+
+		&.error { color: red }
+		&.warning { color: yellow }
+		&.none { color: white }
 	}
 	
 	.dateDisplay {
