--- a/MemoryMosaic/Styles/Components/Import/ImportItemDisplay.scss
+++ b/MemoryMosaic/Styles/Components/Import/ImportItemDisplay.scss
@@ -29,6 +29,10 @@
 		}
 
 		&.full { width: auto; }
+
+		&.error { color: red }
+		&.warning { color: yellow }
+		&.none { color: white }
 	}
 
 	.dateTakenDisplay {
